--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -239,7 +239,7 @@ nav {
                         gap: 10px;
                     }
 
-                        .panel .body .properties .user-form .field-container .form-group .selections ul {
+                        .panel .body .properties .user-form .field-container .form-group .selections .pill-container {
                             border-bottom: 1px solid var(--gray4);
                             flex-direction: row;
                             flex-wrap: wrap;
