--- a/WCSTrainer/Pages/Employees/Index.cshtml
+++ b/WCSTrainer/Pages/Employees/Index.cshtml
@@ -11,34 +11,63 @@
     <div class="body">
         <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
         <div class="properties">
-            <div class="order-list2">
-                <div class="sorters">
-                    <div class="btns">
-                        <a asp-page="Create" class="btn bg-btn btnWhite">Add Employee</a>
+            <div class="flex-column">
+                <div class="order-list2">
+                    <div class="sorters">
+                        <div class="btns">
+                            <a asp-page="Create" class="btn bg-btn btnWhite">Add Employee</a>
+                        </div>
                     </div>
-                </div>
-                <table id="dataTable">
-                    <tr>
-                        <th>Employee ID</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Status</th>
-                        <th></th>
-                        <th></th>
-                        <th></th> 
-                    </tr>
-                    @foreach (var item in Model.Employee) {
-                        <tr class="clickable">
-                            <td>@Html.DisplayFor(modelItem => item.Id)</td>
-                            <td>@Html.DisplayFor(modelItem => item.FirstName)</td>
-                            <td>@Html.DisplayFor(modelItem => item.LastName)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                            <td><a asp-page="./Edit" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Edit</a></td>
-                            <td><a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Details</a></td>
-                            <td><a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Delete</a></td>
+                    <table id="dataTable">
+                        <tr>
+                            <th>Employee ID</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Status</th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
                         </tr>
-                    }
-                </table>
+                        @foreach (var item in Model.Employees) {
+                            <tr class="clickable">
+                                <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                                <td>@Html.DisplayFor(modelItem => item.FirstName)</td>
+                                <td>@Html.DisplayFor(modelItem => item.LastName)</td>
+                                <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                                <td><a asp-page="./Edit" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Edit</a></td>
+                                <td><a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Details</a></td>
+                                <td><a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Delete</a></td>
+                            </tr>
+                        }
+                    </table>
+                </div>
+                <div class="order-list2">
+                    <div class="sorters">
+                        <div class="btns">
+                            <a asp-page="Create" class="btn bg-btn btnWhite">Add Group</a>
+                        </div>
+                    </div>
+                    <table id="dataTable">
+                        <tr>
+                            <th>Group ID</th>
+                            <th>Name</th>
+                            <th>Members</th>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                        @foreach (var item in Model.Groups) {
+                            <tr class="clickable">
+                                <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                                <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                                <td>@Html.DisplayFor(modelItem => item.Trainers)</td>
+                                <td><a asp-page="./Edit" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Edit</a></td>
+                                <td><a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Details</a></td>
+                                <td><a asp-page="./Delete" asp-route-id="@item.Id" class="btn nbg-btn btnGreen">Delete</a></td>
+                            </tr>
+                        }
+                    </table>
+                </div>
             </div>
         </div>
     </div>
