--- a/WCSTrainer/wwwroot/css/universal.css
+++ b/WCSTrainer/wwwroot/css/universal.css
@@ -62,3 +62,8 @@ pre {
     display: flex;
     flex-direction: column;
 }
+
+.flex-center {
+    justify-content: center;
+    align-items: center;
+}
