--- a/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
@@ -41,9 +41,9 @@
                             <tr class="clickable">
                                 <td>@Html.DisplayFor(modelItem => item.Id)</td>
                                 <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                                @foreach (var emp in Model.Employees) {
-                                    if (emp.Id.ToString() == item.Trainee) {
-                                        <td>@emp.FirstName @emp.LastName</td>
+                                @foreach (var employee in Model.Employees) {
+                                    if (employee == item.Trainee) {
+                                        <td>@employee.FirstName @employee.LastName</td>
                                     }
                                 }
                                 <td>@Html.DisplayFor(modelItem => item.Skill)</td>
