Working new models

--- a/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Approval.cshtml
@@ -19,7 +19,7 @@
                         <input asp-for="TrainingOrder.Status" type="hidden" value="Active"/>
 
                         <input asp-for="TrainingOrder.CreateDate" type="hidden"/>
-                        <input asp-for="TrainingOrder.Location" type="hidden"/>
+                        <input asp-for="TrainingOrder.LocationObject" type="hidden"/>
                         <input asp-for="TrainingOrder.Duration" type="hidden"/>
                         <input asp-for="TrainingOrder.Trainee" type="hidden"/>
                         <input asp-for="TrainingOrder.Medium" type="hidden"/>
