--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -57,9 +57,9 @@
                             <div class="form">
                                 <div class="labels">
                                     <p class="control-label">Location*</p>
-                                    <span asp-validation-for="TrainingOrder.Location" class="text-danger"></span>
+                                    <span asp-validation-for="TrainingOrder.LocationObject" class="text-danger"></span>
                                 </div>
-                                <select asp-for="TrainingOrder.Location" class="form-drop2">
+                                <select asp-for="TrainingOrder.LocationObject" class="form-drop2">
                                     <option value="One">One</option>
                                     <option value="Two">Two</option>
                                     <option value="Three">Three</option>
