--- a/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Verification.cshtml
@@ -23,7 +23,7 @@
 
                         <input asp-for="TrainingOrder.CreateDate" type="hidden"/>
                         <input asp-for="TrainingOrder.BeginDate" type="hidden"/>
-                        <input asp-for="TrainingOrder.Location" type="hidden"/>
+                        <input asp-for="TrainingOrder.LocationObject" type="hidden" />
                         <input asp-for="TrainingOrder.EndDate" type="hidden"/>
                         <input asp-for="TrainingOrder.Medium" type="hidden"/>
                         <input asp-for="TrainingOrder.Skill" type="hidden"/>
