--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -18,7 +18,7 @@
                         <input type="hidden" asp-for="TrainingOrder.Id"/>
                         <input asp-for="TrainingOrder.CreateDate" type="hidden" />
                         <input asp-for="TrainingOrder.BeginDate" type="hidden" />
-                        <input asp-for="TrainingOrder.Location" type="hidden" />
+                        <input asp-for="TrainingOrder.LocationObject" type="hidden" />
                         <input asp-for="TrainingOrder.Duration" type="hidden" />
                         <input asp-for="TrainingOrder.Trainers" type="hidden" />
                         <input asp-for="TrainingOrder.Trainee" type="hidden" />
