--- a/WCSTrainer/Pages/TrainingOrders/Details.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Details.cshtml
@@ -48,7 +48,7 @@
                             <p class="title">Trainee</p>
                         </div>
                         <div class="info-content">
-                            @foreach (Models.Employee employee in Model.Employees) {
+                            @foreach (var employee in Model.Employees) {
                                 if (employee.Id.ToString().Equals(Model.TrainingOrder.Trainee)) {
                                     <p class="info">@employee.FirstName @employee.LastName</p>
                                 }
@@ -94,7 +94,7 @@
                             <p class="title">Location</p>
                         </div>
                         <div class="info-content">
-                            <p class="info">@Html.DisplayFor(model => model.TrainingOrder.Location)</p>
+                            <p class="info">@Html.DisplayFor(model => model.TrainingOrder.LocationObject)</p>
                         </div>
                     </div>
                     <div class="text-group">
