--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -123,9 +123,9 @@
                             <div class="form">
                                 <div class="labels">
                                     <p class="control-label">Location</p>
-                                    <span asp-validation-for="TrainingOrder.Location" class="text-danger"></span>
+                                    <span asp-validation-for="TrainingOrder.LocationObject" class="text-danger"></span>
                                 </div>
-                                <select asp-for="TrainingOrder.Location" class="form-drop2">
+                                <select asp-for="TrainingOrder.LocationObject" class="form-drop2">
                                     <option value="1">One</option>
                                     <option value="2">Two</option>
                                     <option value="3">Three</option>
