More database changes

--- a/WCSTrainer/Pages/Employees/Details.cshtml
+++ b/WCSTrainer/Pages/Employees/Details.cshtml
@@ -34,7 +34,7 @@
                             <p class="title">Skills</p>
                         </div>
                         <div class="info-content">
-                            <p class="info">@Html.DisplayFor(model => model.Employee.Skills)</p>
+                            <p class="info">@Html.DisplayFor(model => model.Employee.EmployeeSkills)</p>
                         </div>
                     </div>
                     <div class="text-group">
