--- a/WCSTrainer/Pages/Employees/Create.cshtml
+++ b/WCSTrainer/Pages/Employees/Create.cshtml
@@ -49,9 +49,9 @@
                             <div class="form">
                                 <div class="labels">
                                     <p class="control-label">Skills*</p>
-                                    <span asp-validation-for="Employee.Skills" class="text-danger"></span>
+                                    <span asp-validation-for="Employee.EmployeeSkills" class="text-danger"></span>
                                 </div>
-                                <input asp-for="Employee.Skills" class="form-control" />
+                                <input asp-for="Employee.EmployeeSkills" class="form-control" />
                             </div>
                         </div>
                         <div class="form-group">
