--- a/WCSTrainer/Pages/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Employees/Edit.cshtml
@@ -34,9 +34,9 @@
                     <span asp-validation-for="Employee.TrainingOrders" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Employee.Skills" class="control-label"></label>
-                    <input asp-for="Employee.Skills" class="form-control"/>
-                    <span asp-validation-for="Employee.Skills" class="text-danger"></span>
+                    <label asp-for="Employee.EmployeeSkills" class="control-label"></label>
+                    <input asp-for="Employee.EmployeeSkills" class="form-control" />
+                    <span asp-validation-for="Employee.EmployeeSkills" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Save" class="btn btn-primary" />
